# gspc-res

./: README.md  SubLIFT.M2_timing  Unsual Erro  error  install.sh
Singular_Library/: All_LeadSyz.sing  GPI_TRIAL(1).Lib  GPI_TRIAL.Lib  GPI_TRIAL.lib  IterativeRes.lib  IterativeSubLIFT.lib  LEADSYZ_Kernel.CPP  LEADSYZ_Parallel.Cpp  LIFT_Kernel.CPP  Sch_ext.lib  Sublift_GPI(1).sing  freeResolution.lib  freeResolution.sing  iterative_secondLift.lib  iterativefres.lib  map.cpp  nleadLift.lib
build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  template.pnet
build_dir/gen_template.pnet/: Makefile  Makefile.CXXFLAGS  Makefile.LDFLAGS
build_dir/src/: Makefile  cmake_install.cmake  installation.hpp
build_dir/template/: Makefile  cmake_install.cmake  config.hpp
build_dir/workflow/: Makefile  cmake_install.cmake
example_dir/: .singularhistory  Example_Thesis  Pfaffian.sing  Sch.Ext.sing  Sch_Ext.lib  example.sing  ideal_M2.sing  nodefile  run.sh  templategp.lib  templategspc.lib  terminal_Add.sing
example_dir/temp/: ext_elimination_.ssi  input  schipp_114307_1746534504570819094  schipp_114307_1746534504572610393  schipp_114325_1746534504501823157  (+33 more)
install_dir/: templategspc.lib
template/: CMakeLists.txt  README.md
template/template/: Air_Add_implementation.cpp  CMakeLists.txt  Sum_Se_Gen_Singular.cpp  Try.cpp  config.hpp.in  implementation.cpp  parallel_Add.cpp  singular_functions.cpp  singular_functions.hpp
template/template/LIB/: Kernel_Algorithm.cpp  Reduce_Kernel.cpp  Trygspc.lib  implementation_reserved.cpp  templategspc.lib
(+195 files in other folders)
